--- a/src/style.css
+++ b/src/style.css
@@ -1,72 +1,45 @@
-.container_nav_bar{
-
+:root{
+    color: #ffdff7;
+    background-color: #ffdff7;
 }
-.nav_background_after{
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-.nav_back{
-
+body{
+    margin: 0;
+    padding: 0;
 }
-.nav_icon_main{
-
-}
-.nav_icon_line{
-
-}
-.nav_icon_home{
-
-}
-.nav_icon_gallery{
-
-}
-.nav_icon_story{
-
-}
-.nav_icon_maps{
-
-}
-.nav_background_before{
-
-}
-.nav_icon_round{
-
-}
-.container_main{
-
-}
-.site{
-
-}
-.center_heart{
+.container_z_index_1{
 
 }
 .background{
-
+    position: relative;
+    display: flex;
+    width: fit-content;
+    justify-content: center;
+    align-items: center;
+    /* height: 1000px; */
+    /* overflow: hidden; */
 }
-.background_bottom_left{
-
+.background embed{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* width: 100%;
+    height: 100%; */
+    object-fit: cover;
 }
-.background_bottom_right{
-
+.back{
+    z-index: 2;
+    width: 100%;
+    height: auto;
+    max-width: 400px;
 }
-.background_top_left{
-
-}
-.background_top_right{
-
-}
-.background_top_right_under{
-
-}
-.background_main_img{
-
-}
-.background_z_index_1{
-
-}
-.background_z_index_2{
-
-}
-.background_z_index_3{
-
+.img{
+    z-index: 1;
+    width: 400px;
+    height: auto;
 }
