--- a/src/style.css
+++ b/src/style.css
@@ -46,6 +46,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 5;
 }
 
 .pic-container:hover {
@@ -57,7 +58,7 @@ body {
     height: auto;
     object-fit: contain;
     position: relative;
-    z-index: 2;
+    z-index: 5;
     transform: translate(0%, 0%) scale(1);
     backface-visibility: hidden;
     transition: transform 1s ease;
@@ -67,7 +68,7 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: 4;
     transform-style: preserve-3d;
 }
 
@@ -76,7 +77,7 @@ body {
     width: 60vw;
     height: auto;
     object-fit: contain;
-    z-index: 1;
+    z-index: 4;
     transform: translate(-50%, 0%) scale(0.9) rotateY(180deg);
     opacity: 0.8;
     backface-visibility: hidden;
@@ -91,13 +92,92 @@ body {
     font-family: 'DFVN Radja Lover', cursive;
     font-size: 54px;
     color: #a47175;
-    z-index: 2;
+    z-index: 5;
     white-space: nowrap;
     backface-visibility: hidden;
 }
 
 #days-counter {
     font-weight: bold;
+}
+
+.grid-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 1;
+}
+
+.top-left {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 60%;
+    height: auto;
+    transform: translate(0%, 0%) scale(1);
+    z-index: 3;
+}
+
+.under-top-left {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -200%);
+    width: 30%;
+    height: auto;
+    z-index: 3;
+}
+
+.top-right {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 70%;
+    height: auto;
+    transform: translate(0%, 0%) scale(1);
+    z-index: 3;
+}
+
+.under-top-right {
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    transform: translate(70%, -110%);
+    width: 100%;
+    height: auto;
+    z-index: 2;
+}
+
+.bottom-left {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 70%;
+    height: auto;
+    transform: translate(0%, 0%) scale(1);
+    z-index: 3;
+}
+
+.under-bottom-left {
+    position: absolute;
+    bottom: 50%;
+    left: 50%;
+    transform: translate(-70%, 110%);
+    width: 100%;
+    height: auto;
+    z-index: 2;
+}
+
+.bottom-right {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 70%;
+    height: auto;
+    transform: translate(0%, 0%) scale(1);
+    z-index: 3;
 }
 
 @media (min-width: 600px) {
@@ -112,6 +192,28 @@ body {
     .day-counter-text {
         font-size: 70px;
     }
+    .top-left {
+        transform: translate(10%, 10%) scale(1.25);
+    }
+    .under-top-left {
+        transform: translate(-80%, -50%) scale(0.75);
+    }
+    .top-right {
+        transform: translate(5%, -5%) scale(0.9);
+    }
+    .under-top-right {
+        transform: translate(65%, -83%) scale(0.75);
+    }
+    .bottom-left {
+        transform: translate(-5%, 5%) scale(0.9);
+    }
+    .under-bottom-left {
+        transform: translate(-65%, 83%) scale(0.75);
+    }
+    .bottom-right {
+        transform: translate(5%, 5%) scale(0.9);
+    }
+
 }
 
 @media (min-width: 1200px) {
@@ -127,22 +229,26 @@ body {
         font-size: 90px;
         transform: translate(-50%, -150%)rotateY(180deg);
     }
-}
+    .top-left {
+        transform: translate(-10%, -10%) scale(0.9);
+    }
+    .under-top-left {
+        transform: translate(-100%, -30%) scale(0.75);
+    }
+    .top-right {
+        transform: translate(16%, -16%) scale(0.69);
+    }
+    .under-top-right {
+        transform: translate(70%, -50%) scale(0.6);
+    }
+    .bottom-left {
+        transform: translate(-16%, 16%) scale(0.69);
+    }
+    .under-bottom-left {
+        transform: translate(-70%, 50%) scale(0.6);
+    }
+    .bottom-right {
+        transform: translate(16%, 16%) scale(0.69);
+    }
 
-.top-left {
-    position: absolute;
-    top: 70px;
-    left: 60px;
-    width: 50%;
-    height: auto;
-    z-index: 999;
-}
-
-.under-top-left {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 50%;
-    height: auto;
-    z-index: 998;
 }
